--- a/src/main/resources/org/uet/library_management/ui/settings/settings.fxml
+++ b/src/main/resources/org/uet/library_management/ui/settings/settings.fxml
@@ -40,7 +40,7 @@
         </graphic>
     </Button>
 
-    <Button fx:id="bookmarkButton" styleClass="settings-button" text="Email">
+    <Button fx:id="bookmarkButton" onAction="#handleEmailButton" styleClass="settings-button" text="Email">
         <graphic>
             <ImageView fx:id="bookmarkImageView" fitHeight="16" fitWidth="16">
                 <Image url="@../../icons/bookmark.png" />
@@ -64,7 +64,7 @@
 
     <Pane styleClass="spacing-pane" />
 
-    <Button fx:id="getAllButton" onAction="#handlePassword" styleClass="settings-button" text="About">
+    <Button fx:id="getAllButton" onAction="#handleAbout" styleClass="settings-button" text="About">
         <graphic>
             <ImageView fx:id="getAllImageView" fitHeight="16" fitWidth="16">
                 <Image url="@../../icons/getAll.png" />
