implement edit button

--- a/src/main/resources/org/uet/library_management/styles/bookDetail.css
+++ b/src/main/resources/org/uet/library_management/styles/bookDetail.css
@@ -146,3 +146,16 @@
     -fx-background-color: red;
     -fx-font-family: "Montserrat";
 }
+#editReviewButton {
+       -fx-border-color: black;
+       -fx-border-width: 2px;
+        -fx-border-style: solid;
+       -fx-text-fill: black;
+       -fx-font-family: "Montserrat";
+       -fx-background-color: white;
+       -fx-border-color: black;
+}
+#editReviewButton:hover {
+    -fx-background-color: black;
+    -fx-text-fill: white;
+}
