--- a/src/main/resources/org/uet/library_management/ui/home.fxml
+++ b/src/main/resources/org/uet/library_management/ui/home.fxml
@@ -14,8 +14,8 @@
         </VBox>
     </top>
     <center>
-        <ScrollPane fx:id="scrollpane" styleClass="scroll-pane">
-            <FlowPane fx:id="flowPane" styleClass="flow-pane" />
+        <ScrollPane fx:id="scrollpane" styleClass="scroll-pane" fitToWidth="true" pannable="true" vbarPolicy="ALWAYS">
+            <VBox fx:id="recommendBox" />
         </ScrollPane>
     </center>
 </BorderPane>
