--- a/src/main/resources/org/uet/library_management/styles/home.css
+++ b/src/main/resources/org/uet/library_management/styles/home.css
@@ -22,4 +22,5 @@
     -fx-padding: 10 0 0 20;
     -fx-font-size: 14px;
     -fx-font-family: "Montserrat SemiBold";
+    -fx-background-color: #e1f1fc;
 }
