--- a/src/main/resources/org/uet/library_management/styles/style.css
+++ b/src/main/resources/org/uet/library_management/styles/style.css
@@ -21,8 +21,14 @@
 /*    -fx-pref-width: 8px;*/
 /*}*/
 
+.scroll-pane {
+    -fx-background-color: #e1f1fc;
+    -fx-padding: 0 0 0 0;
+}
+
 .content-pane {
-    -fx-background-color: #EFFBFF;
+    /*-fx-background-color: linear-gradient(to right, #effbff, #bbeafa);*/
+    -fx-background-color: #e1f1fc;
     -fx-pref-width: 800;
     -fx-pref-height: 530;
     /*-fx-padding: 40 40 40 40;*/
@@ -32,25 +38,42 @@
     -fx-font-weight: BOLD;
     -fx-font-size: 32px;
     -fx-padding: 40 0 0 40;
+    -fx-text-fill: #ffffff;
+
+}
+
+.content {
+    -fx-font-size: 20px;
 }
 
 .stack-pane {
 }
 
 .vbox {
-    -fx-background-color: #EFFBFF;
+    /*-fx-background-color: linear-gradient(to right, #effbff, #bbeafa);*/
+    -fx-background-color: #e1f1fc;
 }
 
 .vbox-padding {
-    -fx-background-color: #EFFBFF;
+    /*-fx-background-color: linear-gradient(to right, #effbff, #bbeafa);*/
+    -fx-background-color: #e1f1fc;
     /*-fx-hgap: 25;*/
     /*-fx-vgap: 40;*/
     -fx-padding: 0 0 0 40;
 }
 
 .flow-pane {
-    -fx-background-color: #EFFBFF;
+    /*-fx-background-color: linear-gradient(to right, #effbff, #bbeafa);*/
+    -fx-background-color: #e1f1fc;
     -fx-hgap: 25;
     -fx-vgap: 40;
     -fx-padding: 0 0 0 40;
+}
+
+.head {
+    -fx-background-color: #63baf7;
+}
+
+.separator {
+    -fx-color : #000000;
 }
