--- a/src/main/resources/org/uet/library_management/ui/addBooks.fxml
+++ b/src/main/resources/org/uet/library_management/ui/addBooks.fxml
@@ -11,16 +11,17 @@
             fx:controller="org.uet.library_management.ui.AddBooksController"
             styleClass="content-pane">
     <top>
-        <VBox>
+        <VBox styleClass="head">
             <Label styleClass="head-label" text="Thêm sách" />
             <Separator styleClass="separator" />
         </VBox>
     </top>
     <center>
-        <VBox>
-            <TextField fx:id="isbn10TextField" styleClass="isbn-text-field" promptText="ISBN 10" />
-            <TextField fx:id="isbn13TextField" styleClass="isbn-text-field" promptText="ISBN 13" />
-            <Button fx:id="addButton" onAction="#handleAddButton" text="Add" />
+        <VBox spacing="20" alignment="CENTER">
+            <Label text="Thêm cuốn sách bạn yêu thích vào đây" styleClass="content" />
+            <TextField fx:id="isbn10TextField" styleClass="isbn-text-field" promptText="ISBN 10" minWidth="300" maxWidth="300" />
+            <TextField fx:id="isbn13TextField" styleClass="isbn-text-field" promptText="ISBN 13" minWidth="300" maxWidth="300" />
+            <Button fx:id="addButton" onAction="#handleAddButton" text="Add" minWidth="100" maxWidth="100" />
         </VBox>
     </center>
 </BorderPane>
