--- a/src/main/resources/org/uet/library_management/ui/admin/loanPage.fxml
+++ b/src/main/resources/org/uet/library_management/ui/admin/loanPage.fxml
@@ -11,7 +11,7 @@
             styleClass="content-pane">
     <top>
         <VBox>
-            <Label styleClass="head-label" text="Quản lý mượn" />
+            <Label styleClass="head-label" text="Quản lý mượn/trả" />
             <Separator styleClass="separator" />
         </VBox>
     </top>
