new api key fix register add logo

--- a/src/main/resources/org/uet/library_management/ui/admin/dashboard.fxml
+++ b/src/main/resources/org/uet/library_management/ui/admin/dashboard.fxml
@@ -8,7 +8,7 @@
             fx:controller="org.uet.library_management.ui.admin.DashboardController"
             styleClass="content-pane">
     <top>
-        <VBox>
+        <VBox styleClass="head-label">
             <Label styleClass="head-label" text="Dashboard" />
             <Separator styleClass="separator" />
         </VBox>
