--- a/src/main/resources/org/uet/library_management/ui/bookshelf.fxml
+++ b/src/main/resources/org/uet/library_management/ui/bookshelf.fxml
@@ -18,7 +18,7 @@
     <center>
         <ScrollPane fx:id="verticalScrollpane" styleClass="vertical-scroll-pane" fitToWidth="true" pannable="true">
             <content>
-                <FlowPane fx:id="flowPane" styleClass="flow-pane" />
+                <FlowPane fx:id="flowPane" styleClass="flow-pane" minHeight="1200" />
             </content>
         </ScrollPane>
     </center>
