--- a/src/main/resources/org/uet/library_management/styles/register.css
+++ b/src/main/resources/org/uet/library_management/styles/register.css
@@ -37,3 +37,43 @@
 .register-button {
     -fx-background-color: linear-gradient(to bottom, #aac9f1, #73a2e1);
 }
+
+.empty-label {
+    -fx-text-fill: transparent;
+}
+
+.field {
+    -fx-background-color: #a2c2fa;
+    -fx-background-radius: 5px;
+    -fx-min-height: 35;
+    -fx-max-height: 35;
+    -fx-min-width: 350;
+    -fx-max-width: 350;
+    -fx-prompt-text-fill: #ffffff;
+    -fx-font-family: "Kinetika Medium";
+    -fx-text-fill: #ffffff;
+}
+
+.register-button {
+    -fx-background-color: white;
+    -fx-text-fill: #007bff;
+    -fx-font-family: "Kinetika Black";
+    -fx-font-size: 18px;
+    -fx-background-radius: 15px;
+}
+
+.choice-box {
+    -fx-background-color: white;
+    -fx-text-fill: #007bff;
+    -fx-font-family: "Kinetika Black";
+    -fx-font-size: 18px;
+}
+
+.box {
+    -fx-background-color: #a2c2fa;
+    -fx-min-width: 400;
+    -fx-max-width: 400;
+    -fx-background-radius: 5px
+}
+
+
