--- a/src/main/resources/org/uet/library_management/styles/settings.css
+++ b/src/main/resources/org/uet/library_management/styles/settings.css
@@ -37,7 +37,7 @@
 }
 
 .settings-button {
-    -fx-background-color : #C2E7FF;
+    -fx-background-color : #91d4ff;
     -fx-text-fill: #262626;
     -fx-pref-width: 410;
     -fx-pref-height: 30;
@@ -45,7 +45,7 @@
 }
 
 .settings-button:hover {
-    -fx-background-color: #81ccfc;
+    -fx-background-color: #5cbcfa;
     /*-fx-text-fill: #eeeeee;*/
 }
 
