--- a/src/main/resources/org/uet/library_management/ui/auth/register.fxml
+++ b/src/main/resources/org/uet/library_management/ui/auth/register.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.control.Button?>
 <?import java.lang.String?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.image.ImageView?>
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="org.uet.library_management.ui.auth.RegisterController"
@@ -18,24 +19,46 @@
               AnchorPane.leftAnchor="0" AnchorPane.bottomAnchor="0"
               AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0">
         <Label fx:id="titleLabel" styleClass="title-label" text="Register" />
-        <TextField fx:id="nameField" promptText="Name" minWidth="300" maxWidth="300" />
-        <TextField fx:id="phoneNumberField" promptText="Phone number" minWidth="300" maxWidth="300" />
-        <TextField fx:id="emailField" promptText="Email" minWidth="300" maxWidth="300" />
-        <TextField fx:id="addressField" promptText="Address" minWidth="300" maxWidth="300" />
+
+            <HBox fx:id="nameBox" styleClass="box" alignment="CENTER">
+                <ImageView fx:id="nameIcon" fitHeight="20" fitWidth="20" />
+                <TextField fx:id="nameField" styleClass="field" promptText="Name" />
+            </HBox>
+
+            <HBox fx:id="phoneNumberBox" styleClass="box" alignment="CENTER" >
+                <ImageView fx:id="phoneIcon" fitHeight="20" fitWidth="20" />
+                <TextField fx:id="phoneNumberField" styleClass="field" promptText="Phone number" />
+            </HBox>
+
+            <HBox fx:id="emailBox" styleClass="box" alignment="CENTER" >
+                <ImageView fx:id="emailIcon" fitHeight="20" fitWidth="20" />
+                <TextField fx:id="emailField" styleClass="field" promptText="Email" />
+            </HBox>
+
+            <HBox fx:id="addressBox" styleClass="box" alignment="CENTER">
+                <ImageView fx:id="locationIcon" fitHeight="20" fitWidth="20" />
+                <TextField fx:id="addressField" styleClass="field" promptText="Address" />
+            </HBox>
+
             <HBox alignment = "CENTER" spacing = "50">
-                <ChoiceBox fx:id="membershipStatusBox">
+                <ChoiceBox fx:id="membershipStatusBox" styleClass="choice-box">
                     <String fx:value="Active"/>
                     <String fx:value="Inactive"/>
                 </ChoiceBox>
 
-                <ChoiceBox fx:id="privilegesBox" >
+                <ChoiceBox fx:id="privilegesBox" styleClass="choice-box">
                     <String fx:value="Standard"/>
                     <String fx:value="Premium"/>
                     <String fx:value="Admin"/>
                 </ChoiceBox>
             </HBox>
 
-            <PasswordField fx:id="passwordField" promptText="Password" minWidth="300" maxWidth="300" />
+            <HBox fx:id="passwordBox" alignment="CENTER" styleClass="box" >
+                <ImageView fx:id="passwordIcon" fitHeight="20" fitWidth="20" />
+                <PasswordField fx:id="passwordField" styleClass="field" promptText="Password" />
+            </HBox>
+
+            <Label fx:id="emptyLabel" styleClass="empty-label" text="You must fill in all the fields" />
 
             <HBox style="-fx-alignment: CENTER" spacing="10">
                 <Button styleClass="register-button" onAction="#handleCancelButton" text="Cancel" />
