change some naming to vietnamese

--- a/src/main/resources/org/uet/library_management/ui/auth/login.fxml
+++ b/src/main/resources/org/uet/library_management/ui/auth/login.fxml
@@ -33,21 +33,21 @@
                styleClass="login-pane">
 
         <VBox spacing="30" alignment="CENTER" >
-            <Label fx:id="titleLoginLabel" text="Sign In" />
+            <Label fx:id="titleLoginLabel" text="Đăng nhập" />
             <HBox fx:id="emailFieldBox" alignment="CENTER" minWidth="350" maxWidth="350" minHeight="35" maxHeight="35">
                 <ImageView fx:id="emailIcon" fitHeight="20" fitWidth="20" />
                 <TextField fx:id="emailLoginField" promptText="Email" minWidth="300" maxWidth="300"/>
             </HBox>
             <HBox fx:id="passwordFieldBox" alignment="CENTER" minWidth="350" maxWidth="350" minHeight="35" maxHeight="35">
                 <ImageView fx:id="passwordIcon"  fitHeight="20" fitWidth="20" />
-                <PasswordField fx:id="passwordLoginField" promptText="Password" minWidth="300" maxWidth="300"/>
+                <PasswordField fx:id="passwordLoginField" promptText="Mật khẩu" minWidth="300" maxWidth="300"/>
             </HBox>
 
-            <Button fx:id="loginButton" onAction="#handleLoginButton" mnemonicParsing="false" text="LOGIN"
+            <Button fx:id="loginButton" onAction="#handleLoginButton" mnemonicParsing="false" text="Đăng nhập"
                         minWidth="350" maxWidth="350" minHeight="35" maxHeight="35"/>
             <HBox fx:id="registerBox" alignment="CENTER">
-                <Label fx:id="askRegisterLabel" text="Don't have an account?"/>
-                <Button fx:id="openRegisterButton" onAction="#handleOpenRegisterButton" mnemonicParsing="false" text="Register"
+                <Label fx:id="askRegisterLabel" text="Chưa có tài khoản?"/>
+                <Button fx:id="openRegisterButton" onAction="#handleOpenRegisterButton" mnemonicParsing="false" text="Đăng ký"
                         />
             </HBox>
 
