--- a/src/main/resources/org/uet/library_management/ui/auth/register.fxml
+++ b/src/main/resources/org/uet/library_management/ui/auth/register.fxml
@@ -17,11 +17,11 @@
         <VBox alignment="CENTER" spacing="20"
               AnchorPane.leftAnchor="0" AnchorPane.bottomAnchor="0"
               AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0">
-        <Label fx:id="titleLabel" styleClass="title-label" text="Register" />
-        <TextField fx:id="nameField" promptText="Name" minWidth="300" maxWidth="300" />
-        <TextField fx:id="phoneNumberField" promptText="Phone number" minWidth="300" maxWidth="300" />
+        <Label fx:id="titleLabel" styleClass="title-label" text="Đăng ký" />
+        <TextField fx:id="nameField" promptText="Họ và Tên" minWidth="300" maxWidth="300" />
+        <TextField fx:id="phoneNumberField" promptText="Số điện thoại" minWidth="300" maxWidth="300" />
         <TextField fx:id="emailField" promptText="Email" minWidth="300" maxWidth="300" />
-        <TextField fx:id="addressField" promptText="Address" minWidth="300" maxWidth="300" />
+        <TextField fx:id="addressField" promptText="Địa chỉ" minWidth="300" maxWidth="300" />
             <HBox alignment = "CENTER" spacing = "50">
                 <ChoiceBox fx:id="membershipStatusBox">
                     <String fx:value="Active"/>
@@ -38,8 +38,8 @@
             <PasswordField fx:id="passwordField" promptText="Password" minWidth="300" maxWidth="300" />
 
             <HBox style="-fx-alignment: CENTER" spacing="10">
-                <Button styleClass="register-button" onAction="#handleCancelButton" text="Cancel" />
-                <Button fx:id="registerButton" styleClass="register-button" onAction="#handleRegisterButton" mnemonicParsing="false" text="Register" />
+                <Button styleClass="register-button" onAction="#handleCancelButton" text="Quay lại" />
+                <Button fx:id="registerButton" styleClass="register-button" onAction="#handleRegisterButton" mnemonicParsing="false" text="Đăng ký" />
             </HBox>
         </VBox>
     </AnchorPane>
