--- a/src/main/resources/org/uet/library_management/ui/search/suggestSearch.fxml
+++ b/src/main/resources/org/uet/library_management/ui/search/suggestSearch.fxml
@@ -21,7 +21,7 @@
 
 <!--                        In Your Library-->
                         <VBox styleClass="in-your-library-pane">
-                            <Label styleClass="in-your-library-label" text="In Your Library" />
+                            <Label styleClass="in-your-library-label" text="Trong Thư Viện Của Bạn" />
                             <Separator styleClass="in-your-library-separator" />
                             <ScrollPane fx:id="horizontalScrollpane" styleClass="horizontal-scroll-pane" fitToWidth="true" pannable="true">
                                 <HBox fx:id="inYourLibraryHbox" styleClass="in-your-library-hbox"/>
@@ -29,7 +29,7 @@
                         </VBox>
 
 <!--                        Top Results-->
-                        <Label styleClass="top-results-label" text="Top Results" />
+                        <Label styleClass="top-results-label" text="Kết Quả Phù Hợp Nhất" />
                         <Separator styleClass="separator" />
                         <VBox fx:id="topResultsVbox" styleClass="top-results-vbox" spacing="5" />
                     </VBox>
