--- a/src/main/resources/org/uet/library_management/ui/auth/login.fxml
+++ b/src/main/resources/org/uet/library_management/ui/auth/login.fxml
@@ -34,14 +34,14 @@
                styleClass="login-pane">
 
         <VBox spacing="30" alignment="CENTER" >
-            <Label fx:id="titleLoginLabel" text="Đăng nhập" />
+            <Label fx:id="titleLoginLabel" />
             <ImageView fx:id="logo" fitHeight="50" fitWidth="200" preserveRatio="true">
                 <image>
                     <Image url="@../../icons/title.png" />
                 </image>
             </ImageView>
 
-            <Label fx:id="titleLoginLabel" text="Sign In" />
+            <Label fx:id="titleLoginLabel" text="Đăng nhập" />
             <HBox fx:id="emailFieldBox" alignment="CENTER" minWidth="350" maxWidth="350" minHeight="35" maxHeight="35">
                 <ImageView fx:id="emailIcon" fitHeight="20" fitWidth="20" />
                 <TextField fx:id="emailLoginField" promptText="Email" minWidth="300" maxWidth="300"/>
