add sort system for search and implement 'in your library'

--- a/src/main/resources/org/uet/library_management/styles/search.css
+++ b/src/main/resources/org/uet/library_management/styles/search.css
@@ -39,8 +39,11 @@
     -fx-padding: 20 0 20 40;
 }
 
-.top-results-label {
+#headerAndSortBox {
+    -fx-spacing: 20px;
     -fx-padding: 35 0 0 40;
+}
+.top-results-label {
     -fx-font-size: 16px;
     -fx-font-weight: BOLD;
 }
