test font for home title

--- a/src/main/resources/org/uet/library_management/styles/home.css
+++ b/src/main/resources/org/uet/library_management/styles/home.css
@@ -1,5 +1,6 @@
 .head-label {
-    -fx-font-family: "Montserrat Extrabold";
+    -fx-font-family: "Noto Serif Display Extrabold";
+    -fx-font-size: 40px;
 }
 #recommendBox {
     -fx-padding: 5;
